--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* /* body, ul, li, h1, h2, a{ */
+ body, ul, li, h1, h2, a{ 
   margin: 0;
   padding: 0;
   font-family: arial;  
@@ -113,4 +113,4 @@ footer{
     color: white;
     padding: 10px;
     text-align: center;
-} */
+} 
